Correct journal title for publications

--- a/_publications/2016-06-29-stem-cell.md
+++ b/_publications/2016-06-29-stem-cell.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publications/2016-06-29-stem-cell
 excerpt: 'This investigation comprehensively characterizes and contrasts human lung derived mesenchymal stromal cells (MSCs) from tissue and bronchoalveolar lavage.'
 date: 2016-06-29
-venue: 'bioRxiv'
+venue: 'Stem Cells'
 paperurl: 'https://doi.org/10.1002/stem.2419'
 citation: 'Kenneth A Sinclair, Stephanie T Yerkovich, Tyrone Chen, Jonathan L McQualter, Peter M-A Hopkins, Christine A Wells, Daniel C Chambers, &quot;Mesenchymal Stromal Cells are Readily Recoverable from Lung Tissue, but not the Alveolar Space, in Healthy Humans&quot; <i>Stem Cells</i>, 2016, 34: 2548-2558. DOI: https://doi.org/10.1002/stem.2419'
 ---
