Migrate awards to portfolio

--- a/_portfolio/2013-01-01-aaas.md
+++ b/_portfolio/2013-01-01-aaas.md
@@ -1,8 +1,8 @@
 ---
 title: "American Association for the Advancement of Science sponsored membership"
-collection: awards
+collection: portfolio
 type: "Sponsored membership"
-permalink: /awards/2013-01-01-aaas
+permalink: /portfolio/2013-01-01-aaas
 venue: "American Association for the Advancement of Science"
 date: 2013-01-01
 location: "Washington DC, USA"
