Update next generation sequencing workshop details

--- a/_teaching/2020-ngs.md
+++ b/_teaching/2020-ngs.md
@@ -1,9 +1,9 @@
 ---
-title: "Computational biology workflows"
+title: "Introduction to next generation sequencing"
 collection: teaching
 type: "Workshops"
-permalink: /teaching/2019-workflows
-venue: "EMBL Australia"
+permalink: /teaching/2020-ngs
+venue: "Monash University"
 date: 2020-06-22
 location: "Melbourne, Australia"
 ---
