Fix incorrect journal name in publications

--- a/_publications/2016-03-24-peerj.md
+++ b/_publications/2016-03-24-peerj.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publications/2016-03-24-peerj
 excerpt: 'The Rohart MSC test is a simple in silico test that accurately discriminates MSC from fibroblasts, other adult stem/progenitor cell types or differentiated stromal cells.'
 date: 2016-03-24
-venue: 'bioRxiv'
+venue: 'PeerJ'
 paperurl: 'https://doi.org/10.7717/peerj.1845'
 citation: 'Florian Rohart, Elizabeth A. Mason, Nicholas Matigian, Rowland Mosbergen, Othmar Korn, Tyrone Chen, Suzanne Butcher, Jatin Patel, Kerry Atkinson, Kiarash Khosrotehrani, Nicholas M. Fisk, Kim-Anh Lê Cao, Christine A. Wells​, &quot;A molecular classification of human mesenchymal stromal cells.&quot; <i>PeerJ</i>, 2016, 4:e1845. DOI: https://doi.org/10.7717/peerj.1845'
 ---
