Fix bugs and push latest changes

--- a/_talks/2020-10-15-dlimb-2020.md
+++ b/_talks/2020-10-15-dlimb-2020.md
@@ -4,4 +4,5 @@ collection: talks
 type: "Delegate"
 permalink: /talks/2020-10-15-dlimb-2020
 venue: "(virtual from COVID-19 pandemic of 2019)"
+date: 2020-10-15
 ---
