--- a/_talks/2020-11-27-embl-2020.md
+++ b/_talks/2020-11-27-embl-2020.md
@@ -3,7 +3,7 @@ title: "EMBL (European Molecular Biology Laboratory 22nd PhD Symposium) 2020"
 collection: talks
 type: "Poster"
 permalink: /talks/2020-11-27-embl-2020
-venue: "European Molecular Biology Laboratory"
+venue: "European Molecular Biology Laboratory (virtual from COVID-19 pandemic of 2019)"
 date: 2020-11-27
 location: "Heidelberg, Germany"
 ---
