--- a/_talks/2020-11-24-abacbs-2020.md
+++ b/_talks/2020-11-24-abacbs-2020.md
@@ -7,3 +7,5 @@ venue: "Australian National University (virtual from COVID-19 pandemic of 2019)"
 date: 2020-11-24
 location: "Canberra, Australia"
 ---
+
+[More information here](https://doi.org/10.7490/f1000research.1118362.1)
