--- a/_talks/2020-11-29-dfdt-2019.md
+++ b/_talks/2020-11-29-dfdt-2019.md
@@ -2,9 +2,9 @@
 title: "Data Fluency Digital Toolkit Poster Competition 2019"
 collection: talks
 type: "Talk/Poster"
-permalink: /talks/2020-11-29-dfdt-2019
-venue: "Monash University"
-date: 2020-11-29
+permalink: /talks/2019-11-29-dfdt-2019
+venue: "Monash University (virtual from COVID-19 pandemic of 2019)"
+date: 2019-11-29
 location: "Melbourne, Australia"
 ---
 
